--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "author": "evoto",
   "license": "MIT",
   "dependencies": {
-    "bitcoin-core": "^1.1.0",
     "dotenv": "^2.0.0",
     "electron": "^1.4.3",
     "material-ui": "^0.16.0",
+    "multichain-node": "^2.0.1-alpha24",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
